# gridinterp

./: CMakeLists.txt  README.md  params
include/: grid.h  interplib.h
source/: interplib.cpp  main.cpp
